--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 :root {
-    --accent-color: #1e85fa;
-    --primary-color: #231F20;
+    --accent-color: #1eface;
+    --primary-color: #0d0c0c;
     --body-background-color: #f6f7f8;
 
     --section-title-border-color: rgba(0, 0, 0, 0.2);
@@ -12,15 +12,15 @@
     --hero-link-color: var(--primary-color);
     --hero-link-hover-color: var(--accent-color);
 
-    --hero-box-background-start-color: #FFB500;
+    --hero-box-background-start-color: #1eface;
     --hero-box-background-end-color: var(--accent-color);
 
     --section-title-color: var(--primary-color);
     --section-title-background-color: rgba(255, 255, 255, 0);
 
-    --tablet-text-color: #333333;
-    --tablet-text-second-color: #333333;
-    --tablet-text-third-color: #333333;
+    --tablet-text-color: #0d0c0c;
+    --tablet-text-second-color: #0d0c0c;
+    --tablet-text-third-color: #0d0c0c;
     --tablet-background-color: var(--accent-color);
     --tablet-background-second-color: #e9ecee;
     --tablet-background-third-color: #d8e4f2;
@@ -36,11 +36,11 @@
 }
 
 body.theme-dark {
-    --accent-color: #1c8ac9;
+    --accent-color: #1eface;
     --primary-color: #e0e0e0;
-    --body-background-color: #333333;
+    --body-background-color: #f6f7f8;
 
-    --section-title-border-color: rgba(0, 162, 255,0.2);
+    --section-title-border-color: rgba(0, 255, 205,0.2);
     --card-date-color: #d2d2d2;
 
     /* no diff */
