Update dark theme

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@
 body.theme-dark {
     --accent-color: #1eface;
     --primary-color: #e0e0e0;
-    --body-background-color: #f6f7f8;
+    --body-background-color: #2e3635;
 
     --section-title-border-color: rgba(0, 255, 205,0.2);
     --card-date-color: #d2d2d2;
